Bug 503801 - Discover becomes unmaximized when any popup message or dialog box appears
Summary: Discover becomes unmaximized when any popup message or dialog box appears
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 6.4.0
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-05-05 15:34 UTC by Patrick Silva
Modified: 2026-01-15 17:28 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.0
Sentry Crash Report:


Attachments
screen recording (789.65 KB, video/webm)
2025-05-05 15:34 UTC, Patrick Silva
Details
Discover unmaximising when an error appears if Wi-Fi is disabled during a refresh (915.24 KB, video/webm)
2025-07-03 10:05 UTC, John Veness
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2025-05-05 15:34:39 UTC
Created attachment 180951 [details]
screen recording

SUMMARY
Sometimes an error message appears after click on "Launch" button. If Discover is maximized when this happens, it is unexpectedly unmaximized.

STEPS TO REPRODUCE
1. install Persepolis with .deb package downloaded from
https://github.com/persepolisdm/persepolis/releases/tag/5.1.0
2. open Discover. If it is not maximized, do it.
3. search for Persepolis and click on it
4. click on "Launch" button on top

OBSERVED RESULT
an error message appears and Discover is unmaximized. Please watch the attached screen recording.

EXPECTED RESULT


SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 6.3.80
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.0
Graphics Platform: Wayland
Comment 1 Patrick Silva 2025-05-05 15:35:57 UTC
EXPECTED RESULT
do not unmaximize Discover after the provided steps
Comment 2 Nate Graham 2025-05-06 16:23:10 UTC
What the heck
Comment 3 LeoBeliik 2025-06-30 12:53:14 UTC
it seems to happen with any popup, for example, it happens when uninstalling an app and the popup for extra packages being uninstalled shows and unmaximizes discover.
Comment 4 John Veness 2025-07-03 10:03:14 UTC
Confirmed here too.

Operating System: openSUSE Tumbleweed 20250701
KDE Plasma Version: 6.4.1
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.1
Kernel Version: 6.15.4-1-default (64-bit)
Graphics Platform: X11

(does it in Wayland too).

I think this is recent - started in 6.4.0 maybe.
Comment 5 John Veness 2025-07-03 10:05:22 UTC
Created attachment 182891 [details]
Discover unmaximising when an error appears if Wi-Fi is disabled during a refresh
Comment 6 Nate Graham 2025-07-05 16:46:20 UTC
Can trivially reproduce with Discover's dummy backend (`plasma-discover --backends dummy`) by maximizing the window and then clicking on the "To who?" button.

I can't reproduce with dialogs in System Settings or NeoChat, so it looks like it's Discover-specific.
Comment 7 Tupac 2026-01-15 13:06:31 UTC
I haven't seen this mentioned in the 6.6 beta changelog, will this not be fixed? it's only a problem with discover, and it's incredibly annoying that it gets small everytime a popup appears (which is *not* uncommon).
Comment 8 John Veness 2026-01-15 13:49:55 UTC
As far as I know, this hasn't been fixed in 6.6, no.

I've worked around this by manually dragging Discover's window corners so that its non-maximized size fills the screen. That way, when the bug occurs, Discover still looks the same. Although the fact that the "Restore" icon turns into a "Maximize" one still niggles me!
Comment 9 Bug Janitor Service 2026-01-15 14:03:36 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/1233
Comment 10 Akseli Lahtinen 2026-01-15 14:56:04 UTC
Git commit 2b5caad9081e73060c16317c8dd152307d1ef15d by Akseli Lahtinen.
Committed on 15/01/2026 at 14:02.
Pushed by akselmo into branch 'master'.

DiscoverObject: Use alert instead of show

m_mainWindow->show() would rudely interrupt whatever user is doing
and pop the window in front of them, and also reset the window geometry,
such as unmaximizing it.

Instead just alert the user. If the window is minimized but active,
it will be brought in front of them, but if the window is minimized
but some other app is active, the task manager will show the
attention alert instead.

M  +1    -1    discover/DiscoverObject.cpp

https://invent.kde.org/plasma/discover/-/commit/2b5caad9081e73060c16317c8dd152307d1ef15d
Comment 11 Akseli Lahtinen 2026-01-15 15:23:53 UTC
Git commit 39e68fd43ec013e2caed5fcd657e583dccc381ee by Akseli Lahtinen.
Committed on 15/01/2026 at 14:56.
Pushed by akselmo into branch 'Plasma/6.6'.

DiscoverObject: Use alert instead of show

m_mainWindow->show() would rudely interrupt whatever user is doing
and pop the window in front of them, and also reset the window geometry,
such as unmaximizing it.

Instead just alert the user. If the window is minimized but active,
it will be brought in front of them, but if the window is minimized
but some other app is active, the task manager will show the
attention alert instead.


(cherry picked from commit 2b5caad9081e73060c16317c8dd152307d1ef15d)

Co-authored-by: Akseli Lahtinen <akselmo@akselmo.dev>

M  +1    -1    discover/DiscoverObject.cpp

https://invent.kde.org/plasma/discover/-/commit/39e68fd43ec013e2caed5fcd657e583dccc381ee
Comment 12 John Veness 2026-01-15 15:32:56 UTC
Thanks Akseli!