DiscoverObject: Use alert instead of show

m_mainWindow->show() would rudely interrupt whatever user is doing
and pop the window in front of them, and also reset the window geometry,
such as unmaximizing it.

Instead just alert the user. If the window is minimized but active,
it will be brought in front of them, but if the window is minimized
but some other app is active, the task manager will show the
attention alert instead.

BUG: 503801


(cherry picked from commit 2b5caad9081e73060c16317c8dd152307d1ef15d)

Co-authored-by: Akseli Lahtinen <akselmo@akselmo.dev>